// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useProductList fetch error 1`] = `
Object {
  "error": undefined,
  "loading": true,
  "productList": undefined,
}
`;

exports[`useProductList fetch error 2`] = `
Object {
  "error": "API error",
  "loading": false,
  "productList": undefined,
}
`;

exports[`useProductList fetches product list 1`] = `
Object {
  "error": undefined,
  "loading": true,
  "productList": undefined,
}
`;

exports[`useProductList fetches product list 2`] = `
Object {
  "error": undefined,
  "loading": false,
  "productList": Array [
    Object {
      "colour": "Black",
      "id": 1,
      "img": "http://cdn-img.prettylittlething.com/9/0/a/a/90aa90903a135ee59594f47c7685aa7ef3046e44_cly8063_1.jpg?imwidth=1024",
      "name": "Black Sheet Strappy Textured Glitter Bodycon Dress",
      "price": 10,
    },
    Object {
      "colour": "Stone",
      "id": 2,
      "img": "https://cdn-img.prettylittlething.com/3/6/5/a/365a5d1dce6a2b77b564379b302c9d83afccf33b_cmd2051_1.jpg?imwidth=1024",
      "name": "Stone Ribbed Strappy Cut Out Detail Bodycon Dress",
      "price": 4,
    },
    Object {
      "colour": "Black",
      "id": 3,
      "img": "https://cdn-img.prettylittlething.com/d/c/3/3/dc337260f9ecefdb99a8c8e98cd73ccb1b79cea5_cmb6804_4.jpg?imwidth=1024",
      "name": "Black Frill Tie Shoulder Bodycon Dress",
      "price": 7.99,
    },
    Object {
      "colour": "Red",
      "id": 5,
      "img": "https://cdn-img.prettylittlething.com/f/7/1/8/f718a4011ddf92f48aeefff6da0f475178694599_cly0842_1.jpg?imwidth=1024",
      "name": "Red Pin Stripe Belt T Shirt Dress",
      "price": 17,
    },
  ],
}
`;
